// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks Reducer BUSY_TASK should mark the task as busy 1`] = `
Immutable.Record {
  "byTaskID": Immutable.Map {
    "1": Object {
      "debut": 1475954335,
      "id": "1",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "2": Object {
      "busy": true,
      "debut": 1475954335,
      "id": "2",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "running",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "3": Object {
      "debut": 1475954335,
      "id": "3",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
  },
  "byPlanID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
  "byToolID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
}
`;

exports[`Tasks Reducer CRASH_TASK should mark the task as crashed 1`] = `
Immutable.Record {
  "byTaskID": Immutable.Map {
    "1": Object {
      "debut": 1475954335,
      "id": "1",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "2": Object {
      "busy": false,
      "debut": 1475954335,
      "end": 1475954336,
      "id": "2",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "crashed",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "3": Object {
      "debut": 1475954335,
      "id": "3",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
  },
  "byPlanID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
  "byToolID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
}
`;

exports[`Tasks Reducer FAIL_TASK should mark the task as failed 1`] = `
Immutable.Record {
  "byTaskID": Immutable.Map {
    "1": Object {
      "debut": 1475954335,
      "id": "1",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "2": Object {
      "busy": false,
      "debut": 1475954335,
      "end": 1475954336,
      "id": "2",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "failed",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "3": Object {
      "debut": 1475954335,
      "id": "3",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
  },
  "byPlanID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
  "byToolID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
}
`;

exports[`Tasks Reducer START_TASK should mark the task as started 1`] = `
Immutable.Record {
  "byTaskID": Immutable.Map {
    "1": Object {
      "debut": 1475954335,
      "id": "1",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "2": Object {
      "debut": 1475954335,
      "end": undefined,
      "id": "2",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "running",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "3": Object {
      "debut": 1475954335,
      "id": "3",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
  },
  "byPlanID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
  "byToolID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
}
`;

exports[`Tasks Reducer STOP_TASK should mark the task as stopped 1`] = `
Immutable.Record {
  "byTaskID": Immutable.Map {
    "1": Object {
      "debut": 1475954335,
      "id": "1",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "/ok",
        "type": "shell",
      },
    },
    "2": Object {
      "busy": false,
      "debut": 1475954335,
      "end": 1475954336,
      "id": "2",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "stopped",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "/ok",
        "type": "shell",
      },
    },
    "3": Object {
      "debut": 1475954335,
      "id": "3",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "/ok",
        "type": "shell",
      },
    },
  },
  "byPlanID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
  "byToolID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
}
`;

exports[`Tasks Reducer STOP_TASK_OF_PLAN should mark the task as stopped 1`] = `
Immutable.Record {
  "byTaskID": Immutable.Map {
    "1": Object {
      "debut": 1475954335,
      "id": "1",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "2": Object {
      "busy": false,
      "debut": 1475954335,
      "end": 1475954336,
      "id": "2",
      "plan": Object {
        "config": 2,
        "id": "2",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "2",
          "name": "tool",
        },
      },
      "state": "stopped",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "3": Object {
      "debut": 1475954335,
      "id": "3",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
  },
  "byPlanID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "3",
    ],
    "2": Immutable.List [
      "2",
    ],
  },
  "byToolID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "3",
    ],
    "2": Immutable.List [
      "2",
    ],
  },
}
`;

exports[`Tasks Reducer SUCCEED_TASK should mark the task as succeed 1`] = `
Immutable.Record {
  "byTaskID": Immutable.Map {
    "1": Object {
      "debut": 1475954335,
      "id": "1",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "2": Object {
      "busy": false,
      "debut": 1475954335,
      "end": 1475954336,
      "id": "2",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "succeed",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "3": Object {
      "debut": 1475954335,
      "id": "3",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
  },
  "byPlanID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
  "byToolID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
}
`;

exports[`Tasks Reducer WAITING_TASK should mark the task as waiting 1`] = `
Immutable.Record {
  "byTaskID": Immutable.Map {
    "1": Object {
      "debut": 1475954335,
      "id": "1",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "2": Object {
      "busy": false,
      "debut": 1475954335,
      "id": "2",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "running",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
    "3": Object {
      "debut": 1475954335,
      "id": "3",
      "plan": Object {
        "config": 2,
        "id": "1",
        "packageInfo": Object {
          "name": "root",
          "path": "/",
          "type": "file",
        },
        "stager": Object {
          "host": null,
          "type": "integrated",
        },
        "tool": Object {
          "iconUri": "",
          "id": "1",
          "name": "tool",
        },
      },
      "state": "created",
      "step": 1,
      "strategy": Object {
        "command": "",
        "cwd": "",
        "type": "shell",
      },
    },
  },
  "byPlanID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
  "byToolID": Immutable.Map {
    "1": Immutable.List [
      "1",
      "2",
      "3",
    ],
  },
}
`;
